SERVER-14551 Runner yield during migration cleanup (removeRange) results in fassert